# blog_app

./: .env.templates  .pre-commit-config.yaml  pyproject.toml  requirements.txt
sourse/blogging_app/blogging_app/: settings.py  urls.py
sourse/blogging_app/core/: urls.py
sourse/blogging_app/core/busines_logic/: exceptions.py
sourse/blogging_app/core/migrations/: 0001_initial.py  0002_notifications_tags_users_twits_profile.py  0003_users_email.py  0004_alter_users_created_at.py  0005_countries_created_at_alter_notifications_created_at_and_more.py  0006_remove_countries_created_at_and_more.py  0007_alter_twits_created_at.py  0008_alter_tags_created_at.py  0009_alter_notifications_created_at.py  0010_countries_created_at.py  0011_alter_profile_twit.py  0012_delete_profile.py  0013_profiles.py  0014_delete_profiles.py  0015_profile.py  0016_delete_profile.py  0017_profiles.py  0018_account_delete_profiles.py  0019_profile.py  0020_merge_0018_account_delete_profiles_0019_profile.py  0021_account_user.py  0022_remove_account_id_account_twit_alter_account_user_and_more.py  0023_account_created_at.py  0024_alter_account_user.py  0025_emailconfirmationcode_delete_users.py  0026_account_file.py  0027_alter_account_file.py  0028_alter_account_file.py  0029_account_country_account_description.py  0030_alter_account_followers_alter_account_subscriptions_and_more.py  0031_alter_account_table.py  0032_remove_account_twit_twits_account.py  0033_alter_twits_account.py  0034_remove_twits_account_twits_user.py  0035_remove_twits_user_twits_account.py  0037_alter_profile_table.py  (+29 more)
(+57 files in other folders)
